<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="instagram.tenishev.com.selfiemirror.UserInfoFragment">
    <LinearLayout
        android:id="@+id/info"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/table_сaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/userdata_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/userdata_caption"
                    android:background="@color/userdata_bkg_color"
                    android:textColor="@color/userdata_fg_color"
                    android:padding="@dimen/userdata_padding"
                    android:gravity="center"/>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:id="@+id/user_id_cap"
                    android:text="@string/user_id"
                    android:layout_weight="1"
                    android:background="@color/userdata_bkg_color"
                    android:textColor="@color/userdata_fg_color"
                    android:padding="@dimen/userdata_padding"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/user_id_val"
                    android:text=""
                    android:layout_weight="1"
                    android:background="@color/userdata_bkg_val_color"
                    android:textColor="@color/userdata_fg_color"
                    android:padding="@dimen/userdata_padding"
                    android:gravity="center"/>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:id="@+id/user_name_cap"
                    android:text="@string/user_name"
                    android:layout_weight="1"
                    android:background="@color/userdata_bkg_color"
                    android:textColor="@color/userdata_fg_color"
                    android:padding="@dimen/userdata_padding"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/user_name_val"
                    android:text=""
                    android:layout_weight="1"
                    android:background="@color/userdata_bkg_val_color"
                    android:textColor="@color/userdata_fg_color"
                    android:padding="@dimen/userdata_padding"
                    android:gravity="center"/>
            </TableRow>
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:id="@+id/user_fullname_cap"
                    android:text="@string/user_full_name"
                    android:layout_weight="1"
                    android:background="@color/userdata_bkg_color"
                    android:textColor="@color/userdata_fg_color"
                    android:padding="@dimen/userdata_padding"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/user_fullname_val"
                    android:text=""
                    android:layout_weight="1"
                    android:background="@color/userdata_bkg_val_color"
                    android:textColor="@color/userdata_fg_color"
                    android:padding="@dimen/userdata_padding"
                    android:gravity="center"/>
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="@dimen/caption_text_size"
            android:text="@string/radiogroup_desc"
            android:layout_marginLeft="@dimen/userdata_padding"
            android:layout_marginRight="@dimen/userdata_padding"
            />
        <RadioGroup
            android:id="@+id/request_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/caption_text_size"
            android:padding="@dimen/userdata_padding"
            >
            <RadioButton
                android:id="@+id/request_type_self"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/use_user_data"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/request_type_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/use_media_data"
                />
        </RadioGroup>
        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="@dimen/userdata_padding"
            android:textSize="@dimen/button_text_size"
            android:text="@string/next_btn_text"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/userdata_padding"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="@dimen/caption_text_size"
            android:text="@string/disclaimer_text"
            />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@android:style/Widget.ProgressBar.Large"
        />
</FrameLayout>
